Scrollbar always visible to stop page movement

--- a/themes/Snoonet/assets/sass/screen.scss
+++ b/themes/Snoonet/assets/sass/screen.scss
@@ -10,6 +10,7 @@ html {
 body {
   background: #eff2f7;
   height: 100%;
+  overflow-y: scroll;
 }
 a {
   text-decoration: none;
